# Audit-Calc-Pro

./: .gitignore  README.md  gerador_apk.py  main.py  manual da calculadora.odt  pyproject.toml  requirements.txt  roteiro para propaganda.odt
android/: README.md
android/AuditCalc/: settings.gradle.kts
android/AuditCalc/app/: build.gradle.kts
android/AuditCalc/app/src/main/: AndroidManifest.xml
android/AuditCalc/app/src/main/java/com/auditcalc/: AuditEngine.kt  FinanceMath.kt  MainActivity.kt
android/AuditCalc/app/src/main/java/com/auditcalc/ui/theme/: Theme.kt
android/AuditCalc/app/src/main/res/values/: strings.xml  themes.xml
core/: __init__.py  financeiro_puro.py  motor_auditoria.py
desktop/: interface.py
extras/: README.txt  motor_dedo_duro.py
mobile_flet/: __init__.py  admin_gerador.py  app_identity.py  app_mobile.py  supabase_license.py
releases/: audit_calc.apk.sha1
scripts/: atualizar_icon_gerador.py  build_apk_gerador.ps1  gerar_chave_audit.py  run_build_audit_calc.py  run_build_gerador.py  supabase_rls_licencas.sql
supabase/: config.toml
supabase/examples/: mercadopago_webhook_payment_notification.example.json
supabase/functions/_shared/: mercadopago_webhook_core.ts
supabase/functions/create_mercadopago_payment/: index.ts
supabase/functions/mercadopago-webhook/: index.ts
supabase/functions/mercadopago_webhook/: index.ts
supabase/migrations/: 001_licencas.sql  002_licencas_email_unique.sql  003_consumir_auditoria.sql  004_consumir_auditoria_device.sql  005_validar_acesso.sql  006_marcar_licenca_paga_por_email.sql  007_licencas_chaves_rpc_android.sql  008_marcar_licenca_paga_email_ativo.sql  009_claim_licenca_por_dispositivo_opcional.sql  010_validar_acesso_normaliza_tipo.sql  011_ensure_licencas_data_ativacao.sql  012_repair_licencas_schema.sql  013_marcar_licenca_email_fix_42p10.sql  014_licencas_unique_email_opcional.sql  015_rpc_sem_on_conflict_email.sql  016_mp_email_access_hardening.sql  017_trial_3_audits.sql
