[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-calc"
version = "0.1.2"
description = "Audit Calc — auditoria de financiamento"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.80.0",
]

# Só estes pacotes Python — evita erro de "multiple top-level packages" (desktop/, android/, etc.)
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "mobile_flet*"]

[tool.setuptools]
py-modules = ["main", "gerador_apk"]

[tool.flet]
product = "Audit Calc Pro"
org = "com.auditcalcpro"
icon = "assets/icon_pro.png"

[tool.flet.app]
path = "."
module = "main"
assets_dir = "assets"
exclude = [
    "desktop", "android", "extras", "build", ".git",
    ".idea", "__pycache__",
    "*.odt",
    "**/*.odt",
    "*.egg-info",
    "requirements.txt", "README.md", ".venv", "venv", "scripts",
    "Gerador de Senhas.png",
    # Nunca embutir binários / backend no app.zip (antes: APK dentro do APK ~150MB+)
    "releases",
    "supabase",
    "*.apk",
    "*.aab",
    "*.pdf",
    "**/*.pdf",
    "body.json",
    "audit_calc.egg-info",
    "gerador_apk.py",
    # Ficheiros locais frequentes na raíz (glob *.odt do packager não apanha bem todos os nomes)
    "credenciais no mercado pago.odt",
    "conversa com chatgpt final da programação.odt",
    "email de envio de chave.odt",
    "link para download audit calc.odt",
    "manual da calculadora.odt",
    "roteiro para propaganda.odt",
    "senha do gerador de senhas.odt",
    "site google.odt",
    "audit calc pro link.pdf",
    ".~lock.link para download audit calc.odt#",
    ".~lock.site google.odt#",
]

[tool.flet.app.boot_screen]
show = true
message = "Preparando Audit Calc..."

[tool.flet.app.startup_screen]
show = true
message = "Carregando..."
